# esp32-client-respeaker

./: .gitignore  CMakeLists.txt  ESP_ADF_Dependency.en.md  ESP_ADF_Dependency.zh-CN.md  README.en.md  README.md  README.zh-CN.md  sdkconfig
components/agora_iot_sdk/: CMakeLists.txt
components/agora_iot_sdk/include/: agora_rtc_api.h
main/: CMakeLists.txt  ai_agent.c  ai_agent.h  aic3104_ng.c  aic3104_ng.h  app_config.h  audio_proc.c  audio_proc.h  common.h  gpio_test.c  gpio_test.h  i2s_fd_test.c  i2s_fd_test.h  llm_main.c  rtc_proc.c  rtc_proc.h  video_proc.c  video_proc.h  video_stub.c
